--- a/css/style.css
+++ b/css/style.css
@@ -807,3 +807,51 @@ span.copy-email:hover {
 .cupcake-how-to {
   max-width: 100%;
   height: auto; }
+
+.cocoen {
+  box-sizing: border-box;
+  cursor: pointer;
+  line-height: 0;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  user-select: none; }
+  .cocoen * {
+    box-sizing: inherit; }
+    .cocoen *::after, .cocoen *::before {
+      box-sizing: inherit; }
+  .cocoen img,
+  .cocoen picture > img {
+    max-width: none; }
+  .cocoen > img,
+  .cocoen > picture > img {
+    display: block;
+    width: 100%; }
+  .cocoen > div:first-child,
+  picture .cocoen > div {
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 50%; }
+  .cocoen-drag {
+    background: #d1d5dc;
+    bottom: 0;
+    cursor: ew-resize;
+    left: 50%;
+    margin-left: -1px;
+    position: absolute;
+    top: 0;
+    width: 2px; }
+    .cocoen-drag::before {
+      border: 3px solid #d1d5dc;
+      content: '';
+      height: 30px;
+      left: 50%;
+      margin-left: -7px;
+      margin-top: -18px;
+      position: absolute;
+      top: 50%;
+      width: 14px; }
