--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1138,4 +1138,76 @@ textarea.form-control {
     height: auto;
 }
 
+
+// Image Before After
+
+$drag-colour: $light-blue-gray;
+
+.cocoen {
+  box-sizing: border-box;
+  cursor: pointer;
+  line-height: 0;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  user-select: none;
+
+  * {
+    box-sizing: inherit;
+
+    &::after,
+    &::before {
+      box-sizing: inherit;
+    }
+  }
+
+  img,
+  picture > img {
+    max-width: none;
+  }
+
+  > img,
+  > picture > img {
+    display: block;
+    width: 100%;
+  }
+
+  > div {
+    &:first-child,
+    picture & {
+      height: 100%;
+      left: 0;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      width: 50%;
+    }
+  }
+
+  &-drag {
+    background: $drag-colour;
+    bottom: 0;
+    cursor: ew-resize;
+    left: 50%;
+    margin-left: -1px;
+    position: absolute;
+    top: 0;
+    width: 2px;
+
+    &::before {
+      border: 3px solid $drag-colour;
+      content: '';
+      height: 30px;
+      left: 50%;
+      margin-left: -7px;
+      margin-top: -18px;
+      position: absolute;
+      top: 50%;
+      width: 14px;
+    }
+  }
+}
+
+
  
