--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,32 @@ section.projects {
     transform: scale(1.25, 1.25);
     -webkit-transition: all 0.2s ease-in-out; }
 
+.flow-builder {
+  background-image: url("../images/projects/thumbnails/flow-thumbnail.jpg");
+  background-size: cover;
+  min-height: 200px;
+  padding: 16px;
+  overflow: hidden;
+  -webkit-transition: all 0.2s ease-in-out; }
+  .flow-builder:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.25, 1.25);
+    transform: scale(1.25, 1.25);
+    -webkit-transition: all 0.2s ease-in-out; }
+
+.variant {
+  background-image: url("../images/projects/thumbnails/variant-thumbnail.jpg");
+  background-size: cover;
+  min-height: 200px;
+  padding: 16px;
+  overflow: hidden;
+  -webkit-transition: all 0.2s ease-in-out; }
+  .variant:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.25, 1.25);
+    transform: scale(1.25, 1.25);
+    -webkit-transition: all 0.2s ease-in-out; }
+
 @keyframes lightbox-fade-in {
   from {
     opacity: 0; }
@@ -281,7 +307,7 @@ section.projects {
 #houseRulesOpened,
 #declineFlowOpened,
 #cancelChangeOpened,
-#inboxOpened {
+#inboxOpened, #flowBuilderOpened, #variantOpened {
   position: fixed;
   width: 100%;
   height: 100%;
