--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -383,6 +383,39 @@ section.projects {
 	}
 }
 
+.flow-builder {
+	background-image: url("../images/projects/thumbnails/flow-thumbnail.jpg");
+	background-size: cover;
+	min-height: 200px;
+	padding: 16px;
+	overflow: hidden;
+	-webkit-transition: all 0.2s ease-in-out;
+
+	&:hover {
+		cursor: pointer;
+		-webkit-transform: scale(1.25, 1.25);
+		transform: scale(1.25, 1.25);
+		-webkit-transition: all 0.2s ease-in-out;
+	}
+}
+
+
+.variant {
+	background-image: url("../images/projects/thumbnails/variant-thumbnail.jpg");
+	background-size: cover;
+	min-height: 200px;
+	padding: 16px;
+	overflow: hidden;
+	-webkit-transition: all 0.2s ease-in-out;
+
+	&:hover {
+		cursor: pointer;
+		-webkit-transform: scale(1.25, 1.25);
+		transform: scale(1.25, 1.25);
+		-webkit-transition: all 0.2s ease-in-out;
+	}
+}
+
 // Lightbox
 
 @keyframes lightbox-fade-in {
@@ -398,7 +431,7 @@ section.projects {
 #houseRulesOpened,
 #declineFlowOpened,
 #cancelChangeOpened,
-#inboxOpened {
+#inboxOpened, #flowBuilderOpened, #variantOpened {
 	position: fixed;
 	width: 100%;
 	height: 100%;
