--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,7 @@ section.projects {
 #houseRulesOpened,
 #declineFlowOpened,
 #cancelChangeOpened,
-#inboxOpened, #flowBuilderOpened, #variantOpened {
+#inboxOpened, #flowBuilderOpened, #variantOpened, #versioningOpened, #workshopsOpened {
   position: fixed;
   width: 100%;
   height: 100%;
