--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -475,7 +475,7 @@ section.projects {
 #houseRulesOpened,
 #declineFlowOpened,
 #cancelChangeOpened,
-#inboxOpened, #flowBuilderOpened, #variantOpened {
+#inboxOpened, #flowBuilderOpened, #variantOpened, #versioningOpened, #workshopsOpened {
 	position: fixed;
 	width: 100%;
 	height: 100%;
